fix: try to stop overflow on mobiles

--- a/sites/hired/components/Title/title.module.css
+++ b/sites/hired/components/Title/title.module.css
@@ -2,4 +2,5 @@
   font-weight: 500;
   width: 100%;
   text-align: center;
+  margin: 40px auto;
 }
