--- a/sites/hired/styles/globals.css
+++ b/sites/hired/styles/globals.css
@@ -1,5 +1,8 @@
 html,
 body {
+  height: 100%;
+  height: 100vh;
+  height: -webkit-fill-available;
   padding: 0;
   margin: 0;
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
@@ -13,11 +16,15 @@ body {
 }
 
 .container {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .content {
@@ -25,7 +32,6 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -56,6 +62,7 @@ input[type='text'] {
   height: 48px;
   margin: 16px auto;
   padding: 0 8px;
+  text-align: center;
   width: 250px;
   border-radius: 4px;
   border: 1px solid var(--color-grey-dark);
